--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "tailwindcss": "^3.0.23"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "firebase": "^9.6.10",
+    "node-sass": "^7.0.1",
+    "postcss-scss": "^4.0.3",
+    "sirv-cli": "^2.0.0",
+    "svelte-navigator": "^3.1.5",
+    "svelte-preprocess": "^4.10.5",
+    "svelte-routing": "^1.6.0"
   }
 }
